--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4",
+    "handlebars": "~3.0.3"
+  }
 }
