--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
+    "innodb-optimized-uuid": "^1.1.1",
     "jade": "~1.11.0",
     "mongodb": "^2.0.41",
     "morgan": "~1.6.1",
+    "performance-now": "^0.2.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.6"
   }
