Have working copy of php bubble popping application

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 _Store
 Thumbs.db
-/.idea
-/node_modules
-npm-debug.log
-/bower_components
+/public/components
+/vendor
+.DS_Store
+.idea/*
+.vagrant
+/tests/coverage/*
