--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,6 @@
 web:
   build: .
   ports:
-    - "3000:3000"
-  environment:
-    - PORT=3000
-    - NODE_ENV=development
-    - NODE_MONGODB_URL=mongoDB:27017
-    - NODE_MONGODB_DATABASE_NAME=motorcycle-bubbles
-    - ANALYTICS_EVENT_ENABLED=true
-    - ANALYTICS_EVENT_HOST=circuitBreakerAnalytics
-    - ANALYTICS_EVENT_PORT=3001
-    - DEBUG=motorcycle-bubbles:*
-    - BUBBLES_BASE_URL=bikefree.tv
-  links:
-    - mongoDB:mongoDB
-    - circuitBreakerAnalytics:circuitBreakerAnalytics
-mongoDB:
-  image: tutum/mongodb
-  environment:
-    - AUTH=no
-circuitBreakerAnalytics:
-  image: jasonmichels/circuit-breaker-analytics
-  ports:
-   - "3001:3001"
-  environment:
-    - PORT=3001
-    - NODE_ENV=development
-    - NODE_MONGODB_URL=mongoDB:27017
-    - NODE_MONGODB_DATABASE_NAME=circuit-breaker-analytics
-  links:
-    - mongoDB:mongoDB
+   - "9000:80"
+  volumes:
+    - .:/var/www/html:rw
